# constantipy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
completions/: README.md  _constantipy  constantipy.bash  constantipy.tcsh
scripts/: commit-helper.sh  generate-markdown-table.py  generate_completions.py  report-stats.sh
src/constantipy/: analysis.py  args.py  cli.py  common.py  exceptions.py  heuristics.py  loader.py  refactor.py  scanner.py
tests/: conftest.py  mock_args.py  test_advanced_flows.py  test_analysis.py  test_cli.py  test_config.py  test_heuristics.py  test_integration.py  test_loader.py  test_nodeps.py  test_properties.py  test_refactor.py  test_scanner.py
