[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constantipy"
version = "0.1.0"
description = "A tool to refactor magic strings and other magic constants into named constants."
readme = "README.md"
authors = [
  { name="The Constantipy Authors", email="154452450+qooxzuub@users.noreply.github.com" },
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pylint",
    "pre-commit",
    "shtab",
]

[project.scripts]
constantipy = "constantipy.cli:main"

[project.urls]
"Homepage" = "https://github.com/qooxzuub/constantipy"
"Bug Tracker" = "https://github.com/qooxzuub/constantipy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    # "C0114", # missing-module-docstring (optional, enable if you want strictness)
    # "C0115", # missing-class-docstring
    # "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 88

# -----------------------------
# Pylint relaxed rules for tests/
# -----------------------------
[tool.pylint."tests/.*"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",

    # Tests often use many locals, args, or statements
    "too-many-locals",
    "too-many-arguments",
    "too-many-statements",

    # tests often use assert directly, dynamic attributes, etc.
    "protected-access",
    "invalid-name",
]
max-line-length = 160

# Optional: sometimes useful for test helpers
extension-pkg-whitelist = []
